--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0-next.0",
+    "@angular/animations": "^8.2.0-next.1",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.2.0-next.0",
     "@angular/compiler": "~8.2.0-next.0",
     "@angular/core": "~8.2.0-next.0",
     "@angular/forms": "~8.2.0-next.0",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.2.0-next.0",
     "@angular/platform-browser-dynamic": "~8.2.0-next.0",
     "@angular/router": "~8.2.0-next.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "4.1.1",
+    "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^5.1.0",
+    "ngx-device-detector": "^1.3.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
