--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/assets/css/the-theme.scss",
+              "src/the-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -127,4 +127,5 @@
     }
   },
   "defaultProject": "brpl-v2"
+
 }
