--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "brpl-v2",
-  "version": "0.0.0",
+  "name": "new-form-of-brpl",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "cordova": "ng build --prod --base-href ./ --output-path C:/Users/Y/WebstormProjects/untitled1/www/",
+    "to-electron": "ng build --prod --base-href ./ --output-path C:/Users/Y/WebstormProjects/angular-electron/dist/form/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,11 +24,14 @@
     "@angular/platform-browser": "~8.2.0-next.0",
     "@angular/platform-browser-dynamic": "~8.2.0-next.0",
     "@angular/router": "~8.2.0-next.0",
+    "@thisissoon/angular-inviewport": "^4.2.0",
     "animate.css": "^3.7.2",
     "bootstrap": "4.1.1",
     "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.7.0",
     "ngx-bootstrap": "^5.1.0",
     "ngx-device-detector": "^1.3.9",
+    "ngx-electron": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -36,10 +41,12 @@
     "@angular/cli": "~8.2.0-next.0",
     "@angular/compiler-cli": "~8.2.0-next.0",
     "@angular/language-service": "~8.2.0-next.0",
-    "@types/node": "~8.9.4",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "electron": "^5.0.8",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
